# IMPA

./: CMakeLists.txt
10038_JollyJumpers/: main.cpp
10071_BackToHighSchoolPhysics/: main.cpp
100_The3n+1Problem/: main.cpp
10161_AntOnAChessboard/: main.cpp
10172 - The Lonesome Cargo Distributor/: CMakeLists.txt  main.cpp
10229_ModularFibonacci/: main.cpp
10273_EatorNottoEat/: main.cpp
10405_LongestCommonSubsequence/: main.cpp
10496_CollectingBeepers/: main.cpp
10555_DeadFraction/: main.cpp
10622_PerfectP-thPowers/: main.cpp
10650_DeterminatePrime/: main.cpp
10654 - The Uxuhul Voting System/: main.cpp
10654_TheUxuhulVotingSystem/: CMakeLists.txt
10680_LCM/: main.cpp
10702_TravellingSalesman/: input.txt  main.cpp
10728_Help!/: input.txt  main.cpp
10751_Chessboard/: main.cpp
10927_BrightLights/: main.cpp
10986_SendingEmail/: main.cpp
11003 - Boxes/: input.txt
11003_Boxes/: main.cpp
11057_ExactSum/: main.cpp
1112_MiceAndMaze/: main.cpp
11172_RelationalOperators/: main.cpp
11228_TransportationSystem/: main.cpp
11307_AlternativeArborescence/: input.txt  main.cpp
11348_Exhibition/: input.txt  main.cpp
11385_DaVinciCode/: main.cpp
11417_GCD/: main.cpp
11512_GATTACA/: main.cpp
11547_AutomaticAnswer/: main.cpp
11614_EtruscanWarriorsNeverPlayChess/: main.cpp
11621_SmallFactors/: main.cpp
11631_DarkRoads/: main.cpp
11747_HeavyCycleEdges/: main.cpp
11782_OptimalCut/: input.txt  main.cpp
11855_Buzzwords/: main.cpp
11878_HomeworkChecker/: main.cpp
12096_TheSetStackComputer/: main.cpp
12264_Risk/: input.txt  main.cpp
13025 - Back to the Past/: main.cpp
13025_BacktothePast/: CMakeLists.txt
1584_CircularSequence/: main.cpp
1595_Symmetry/: main.cpp
1644_PrimeGap/: main.cpp
186 - Trip Routing/: CMakeLists.txt
186_TripRouting/: main.cpp
343_WhatBaseIsThis/: input.txt  main.cpp
543_GoldbachsConjecture/: main.cpp
573_TheSnail/: main.cpp
587_TheresTreasureEverywhere!/: main.cpp
589 - Pushing Boxes/: CMakeLists.txt  input.txt  main.cpp  main2.cpp
711_DividingUp/: input.txt  main.cpp
714_CopyingBooks/: main.cpp
787_MaximumSubsequenceProduct/: main.cpp
897 - Anagrammatic Primes/: input.txt  main.cpp
897_AnagrammaticPrimes/: CMakeLists.txt
